<resources>
    <string name="app_name">MovieBase</string>

    <!-- Title Fragments -->
    <string name="title_feed">MovieBase Review Feed</string>
    <string name="title_login">MovieBase Login</string>
    <string name="title_profile">My Profile</string>
    <string name="title_add_review">Add Review</string>
    <string name="action_settings">Settings</string>
    <string name="action_review">Add Review</string>
    <string name="action_refresh">Refresh</string>

    <!-- Search Bar Fragment -->
    <string name="search_button_text">Search</string>


    <!-- List Row Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_description">Movie Description</string>
    <string name="movie_year">Movie Year</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="movie_review">Movie Review. Text Text Text Text Text Text Text Text Text Text</string>
    <string name="movie_score">10</string>
    <string name="movie_title">Movie Title. Movie Title. Movie Title. Movie Title. Movie Title.</string>
    <string name="search_hint">Enter Movie Name</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="movie_cover_image">movie cover image</string>
    <string name="edit_fragment_title">Edit Fragment Title</string>
    <string name="view_fragment_title">View Fragment Title</string>
    <string name="image_cover">image cover</string>
    <string name="arrow_icon">arrow icon</string>
    <string name="review_text">Type review here...</string>
    <string name="save_button_text">Save Review</string>
    <string name="action_save">Save Review</string>
    <string name="no_results_found">No results found!</string>
    <string name="password">password</string>
    <string name="email_address_com">email@address.com</string>
    <string name="moviebaselogo">MovieBaseLogo</string>
    <string name="email">email</string>
    <string name="passwords">password</string>
    <string name="login_btn">Login</string>
    <string name="action_logout">Logout</string>
    <string name="username">username</string>
    <string name="create_user">Create User</string>
    <string name="cancel_user">cancel user</string>
    <string name="create_user_btn">Create User</string>

</resources>
