<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jayden.moviebase.CreateUserActvity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="username"
        android:id="@+id/username_view"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_text"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/email_view"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/email_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/password_view"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/passwords"
        android:id="@+id/password_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:id="@+id/create_user_bttn"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_user"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:id="@+id/cancel_creation_bttn"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center" />
</LinearLayout>