<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/movie_title"
        android:id="@+id/listItemMovieTitle"
        android:textColor="@color/titleColor"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listItemMovieRating"
        android:text="@string/movie_rating"
        android:textStyle="bold"
        android:textColor="@color/secondaryColor"
        android:ellipsize="end"
        android:layout_alignStart="@+id/listItemMovieTitle"
        android:layout_below="@+id/listItemMovieTitle"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listItemMovieYear"
        android:text="@string/movie_year"
        android:textStyle="bold"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_toRightOf="@+id/listItemMovieRating"
        android:layout_below="@+id/listItemMovieTitle"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listItemMovieDescription"
        android:text="@string/movie_description"
        android:textColor="@color/descriptionColor"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_below="@+id/listItemMovieYear"
        android:layout_alignStart="@+id/listItemMovieTitle"
        android:layout_marginTop="5dp"/>



</RelativeLayout>
