<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f5f5f5"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/movie_title"
        android:id="@+id/listItemMovieTitle"
        android:textColor="@color/titleColor"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listItemMovieYear"
        android:text="@string/movie_year"
        android:textColor="@color/secondaryColor"
        android:textStyle="bold"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_below="@+id/listItemMovieTitle"
        android:layout_alignStart="@+id/listItemMovieTitle" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/listItemArrow"
        android:layout_centerVertical="true"
        android:background="@drawable/arrow"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/arrow_icon" />

</RelativeLayout>
